blink: Fix ImageResource::OnMemoryDump() when the image is null.

This is hit in perf benchmarks, namely
v8.browsing_desktop/browse:news:flipboard (see attached bug).

Also fix trivial "git cl lint" warnings.

Bug: 864718
Change-Id: If00839d578e04845f768d8480dc084f22980ed62
Reviewed-on: https://chromium-review.googlesource.com/1184843
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Benoit L <lizeb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585431}